--- a/djangoEjemplo/tienda/static/css/juego.css
+++ b/djangoEjemplo/tienda/static/css/juego.css
@@ -3,21 +3,65 @@
     font-family: "Montserrat", sans-serif;
 }
 
-#backgroudBanner{
+#topBanner{
    margin: auto;
+   padding: 10px 50px;
+   
 }
+
+#topBanner img{
+    display: block;
+    margin: auto;
+    width: 100%;
+ }
+ textarea, input{
+    display: block;
+    margin-bottom: 10px ;
+    width: 100%;
+    margin-top: 5px;
+   
+    
+ }
+ .input-container{
+    margin: auto;
+    width: 80%;
+    margin-top: 20px;
+
+    
+ }
+ #button-div{
+    align-self: self-end;
+    margin-top: 20px;
+    padding: 20px;
+
+ }
+form{
+    color: blue;
+    background-color: silver;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 50%;
+    right: 30px;
+    border-radius: 20px;
+    padding: 10px;
+    margin: 20px;
+    float: right;
+
+}
+
 #descripcion{
     
-    margin: 10px 50px;
+    margin: auto;
+    padding: 10px 50px;
+    
     
 }
 #container{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
+    position: relative;
     margin: auto;
     border-top: 1px solid silver;
-    width: 80vw;
+    width: 60vw;
+    background-color: aqua;
+    
 }
