cambios para agregar el login

--- a/djangoEjemplo/tienda/templates/base.html
+++ b/djangoEjemplo/tienda/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static './css/main.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
-    <title>{% block title %}My amazing site{% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     <header class="section">
@@ -31,9 +31,16 @@
           
             <div id="navbarBasicExample" class="navbar-menu">
               <div class="navbar-start">
-                <a class="navbar-item">
+                <a class="navbar-item" href="{% url 'index' %}" >
                   Home
                 </a>
+                {%if user.is_authenticated%}
+                  <a  class="navbar-item" href="#">
+                    {{user.username}}
+                  </a>
+                  
+                {%endif%}
+               
           
                 <a class="navbar-item">
                   Documentation
