--- a/djangoEjemplo/tienda/templates/tienda/index.html
+++ b/djangoEjemplo/tienda/templates/tienda/index.html
@@ -1,5 +1,6 @@
 
     {% extends "base.html" %}
+    {% block title %}Games-Chile{% endblock %}
     {% block content %}
         
             <div class="fixed-grid has-1-cols-mobile has-3-cols-desktop">
@@ -58,4 +59,3 @@
 
 
 
-</html>
