--- a/djangoEjemplo/tienda/templates/base.html
+++ b/djangoEjemplo/tienda/templates/base.html
@@ -34,13 +34,7 @@
                 <a class="navbar-item" href="{% url 'index' %}" >
                   Home
                 </a>
-                {%if user.is_authenticated%}
-                  <a  class="navbar-item" href="#">
-                    {{user.username}}
-                  </a>
-                  
-                {%endif%}
-               
+          
           
                 <a class="navbar-item">
                   Documentation
@@ -67,6 +61,22 @@
                     </a>
                   </div>
                 </div>
+              </div>
+              <div class="navbar-end">
+
+                {%if user.is_authenticated%}
+                  <a  class="navbar-item" href="#">
+                    {{user.username}}
+                  </a>
+
+                  <a class="navbar-item secondary" href="{% url 'logout' %}">
+                    Logout
+                  </a>
+  
+                  
+                {%endif%}
+
+               
               </div>
           
               
