--- a/djangoEjemplo/tienda/templates/tienda/registro.html
+++ b/djangoEjemplo/tienda/templates/tienda/registro.html
@@ -7,7 +7,7 @@
     <form action="" method="post">
     {% csrf_token %}
     {{form}}
-    <button type="submit" class="button is-primary">Ingresar</button>
+    <button type="submit" class="button is-primary">Registrarse</button>
     </form>
 
 {% endblock%}
