creando logica para el carrito de compras

--- a/djangoEjemplo/tienda/templates/tienda/index.html
+++ b/djangoEjemplo/tienda/templates/tienda/index.html
@@ -6,7 +6,7 @@
             <div class="fixed-grid has-1-cols-mobile has-3-cols-desktop">
                 <div class="grid">
 
-                    {%for juego in RPG %}
+                    {%for juego in juegos %}
                     
                     <div class="card">
                         <div class="card-image">
@@ -30,6 +30,7 @@
                                 </div>
                             </div>
                         </div>
+                        
                     
                         <div class="content preview-content ">
                             <p>{{juego.preview}}</p>
