--- a/djangoEjemplo/tienda/templates/base.html
+++ b/djangoEjemplo/tienda/templates/base.html
@@ -65,8 +65,8 @@
               <div class="navbar-end">
 
                 {%if user.is_authenticated%}
-                  <a  class="navbar-item" href="#">
-                    {{user.username}}
+                  <a  class="navbar-item" href="{% url 'carro' %}">
+                    <p>Carro({{tamaño_carrito}})</p>
                   </a>
 
                   <a class="navbar-item secondary" href="{% url 'logout' %}">
